Project

General

Profile

Actions

Bug #42891

closed

TestClsRbd.mirror_image_status failure during mimic->master(octopus) upgrade

Added by Sage Weil over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2019-11-19T18:27:44.390 INFO:tasks.workunit.client.0.smithi149.stdout:[ RUN      ] TestClsRbd.mirror_image_status
2019-11-19T18:27:44.390 INFO:tasks.workunit.client.0.smithi149.stdout:/build/ceph-13.2.6-931-gf02c04d/src/test/cls_rbd/test_cls_rbd.cc:1699: Failure
2019-11-19T18:27:44.390 INFO:tasks.workunit.client.0.smithi149.stdout:      Expected: read_status
2019-11-19T18:27:44.391 INFO:tasks.workunit.client.0.smithi149.stdout:      Which is: [state=down+unknown, description=, last_update=2019-11-19 18:27:44.382752]
2019-11-19T18:27:44.391 INFO:tasks.workunit.client.0.smithi149.stdout:To be equal to: status1
2019-11-19T18:27:44.391 INFO:tasks.workunit.client.0.smithi149.stdout:      Which is: [state=up+unknown, description=, last_update=0.000000]
2019-11-19T18:27:44.391 INFO:tasks.workunit.client.0.smithi149.stdout:[  FAILED  ] TestClsRbd.mirror_image_status (38 ms)

1/3 of osds were mimic, 2/3 were master at this point in the run.

/a/sage-2019-11-19_05:29:27-rados-wip-sage-testing-2019-11-18-1656-distro-basic-smithi/4522769

description: rados/upgrade/mimic-x-singleton/{0-cluster/{openstack.yaml start.yaml}
1-install/mimic.yaml 2-partial-upgrade/firsthalf.yaml 3-thrash/default.yaml 4-workload/{rbd-cls.yaml
rbd-import-export.yaml readwrite.yaml snaps-few-objects.yaml} 5-workload/{radosbench.yaml
rbd_api.yaml} 6-finish-upgrade.yaml 7-nautilus.yaml 8-workload/{rbd-python.yaml
rgw-swift.yaml snaps-many-objects.yaml} bluestore-bitmap.yaml supported-random-distro$/{ubuntu_latest.yaml}
thrashosds-health.yaml}


Related issues 2 (0 open2 closed)

Related to RADOS - Bug #42968: TestClsRbd.mirror_image_status failure during luminous->nautilus upgradeDuplicate11/22/2019

Actions
Copied to rbd - Backport #43009: nautilus: TestClsRbd.mirror_image_status failure during mimic->master(octopus) upgradeResolvedActions
Actions #1

Updated by Neha Ojha over 4 years ago

/a/nojha-2019-11-20_19:52:21-rados-fix-merge-vs-backoff-distro-basic-smithi/4525868/

Actions #2

Updated by Yuri Weinstein over 4 years ago

  • Related to Bug #42968: TestClsRbd.mirror_image_status failure during luminous->nautilus upgrade added
Actions #3

Updated by Neha Ojha over 4 years ago

/a/nojha-2019-11-22_01:55:39-rados-fix-merge-vs-backoff-with-revert-distro-basic-smithi/4531250/

Actions #4

Updated by Jason Dillaman over 4 years ago

  • Status changed from 12 to In Progress
  • Assignee set to Jason Dillaman
Actions #5

Updated by Jason Dillaman over 4 years ago

  • Backport set to nautilus
  • Pull request ID set to 31824

The backport will be a release blocker for Nautilus since it's a regression introduced by [1]

[1] https://tracker.ceph.com/issues/41968

Actions #6

Updated by Sage Weil over 4 years ago

/a/sage-2019-11-22_21:29:00-rados-wip-sage-testing-2019-11-22-1122-distro-basic-smithi/4534174

Actions #7

Updated by Sage Weil over 4 years ago

If we need to expedite 14.2.5, should we revert the other fix?

Actions #8

Updated by Jason Dillaman over 4 years ago

  • Status changed from In Progress to Fix Under Review
Actions #9

Updated by Sage Weil over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #10

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43009: nautilus: TestClsRbd.mirror_image_status failure during mimic->master(octopus) upgrade added
Actions #12

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF